2013-03-06  Bernhard Reiter  <ockham@raz.or.at>

	* Replace 'import Image' by 'try: from PIL import Image
	  except ImportError: import Image'.
	  Rationale: http://lists.debian.org/debian-python/2013/02/msg00017.html
	* Update Gourmet and Python version in windows/gourmet-installer.nsi.
	* Update *.po files to match current source.
	* Update *.po files from Launchpad Translations.
	* Add author_email field to setup.py.
	* Update MANIFEST.in.
	* Remove windows/Gourmet.pyw from po/POTFILES.in.

2013-03-04  Bernhard Reiter  <ockham@raz.or.at>

	* Remove obsolete files.
	* Update LICENSE (new FSF address).
	* Remove windows/Gourmet.pyw as it's obsoleted by bin/gourmet.
	* Fix some py2exe parameters.

2013-03-03  Bernhard Reiter  <ockham@raz.or.at>

	* Fix directory locations in setup_win.py.
	* Fix import path in setup_win.py

2013-02-27  Bernhard Reiter  <ockham@raz.or.at>

	* Backup when upgrading the DB to v0.16.
	* Remove obsolete comment.
	* Remove obsolete file gourmet/PngImagePluginUpToDate.py.
	* Simplify a conditional expression.
	* Avoid a KeyError when pressing Enter on an empty search entry.
	* Remove gourmet/importers/mealmaster_importer.py from po/POTFILES.in.

2013-02-20  Bernhard Reiter  <ockham@raz.or.at>

	* Remove gourmet/importers/mealmaster_importer.py as it's obsolete.
	  That file lives now in gourmet/plugins/import_export/mealmaster_plugin/.
	* Remove shebangs from non-executable files.
	* Change wording of README.md a bit.
	* Merge pull request #694 from MrShark/master
	  Make working in a virtualenv easier

2013-02-14  jens persson  <jens@persson.cx>

	* Update documentation
	* changed /usr/bin/python to /usr/bin/env python to alow usage in virtualenvs
	* Remove hardcoded install path

2013-02-06  Bernhard Reiter  <ockham@raz.or.at>

	Fix #288.

2013-02-05  Bernhard Reiter  <ockham@raz.or.at>

	* Remove some clauses that checked for SQLALchemy < 0.6 as we're relying on >= 0.7 anyway now.